Introduce new Spring properties for adapters